# alandr-kattis

./: .gitignore  CMakeLists.txt
addingwords/: CMakeLists.txt  main.cpp
allpairspath/: CMakeLists.txt  main.cpp
almostunionfind/: CMakeLists.txt  UnionFind.cpp  UnionFind.hpp  main.cpp
bond/: CMakeLists.txt  main.cpp
chasingsubs/: CMakeLists.txt  main.cpp
clockpictures/: CMakeLists.txt  main.cpp
closestpair1/: CMakeLists.txt  main.cpp
dominoes/: CMakeLists.txt  MinCostMaxFlow.h  main.cpp
entertainmentbox/: CMakeLists.txt  main.cpp
fenwick/: CMakeLists.txt  Tree.cpp  Tree.hpp  main.cpp
fenwick/old/: Tree.hpp
gamerank/: CMakeLists.txt  main.cpp
guessthedatastructure/: CMakeLists.txt  main.cpp
hashing/: CMakeLists.txt  main.cpp
imperfectgps/: CMakeLists.txt  main.cpp  ray.cpp  ray.hpp  vec.cpp  vec.hpp
jailbreak/: CMakeLists.txt  main.cpp
kotid/: CMakeLists.txt  Tree.hpp  main.cpp
minimumscalar/: CMakeLists.txt  main.cpp
minspantree/: CMakeLists.txt  main.cpp
orders/: CMakeLists.txt  main.cpp
paintball/: CMakeLists.txt  main.cpp
quantum/: CMakeLists.txt  Operation.cpp  Operation.hpp  Search.cpp  Search.hpp  main.cpp
shortestpath1/: CMakeLists.txt  main.cpp
stringmatching/: CMakeLists.txt  main.cpp
subwayplanning/: CMakeLists.txt  main.cpp
trainsorting/: CMakeLists.txt  main.cpp
trojke/: CMakeLists.txt  main.cpp
watchdog/: CMakeLists.txt  main.cpp
